kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudcart-api
  namespace: cloudcart

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudcart-api

  template:
    metadata:
      labels:
        app: cloudcart-api

    spec:
      containers:
        - name: cloudcart-api
          image: aysh97/cloudcart-api:latest

          ports:
            - containerPort: 8000

          resources:
            requests:
              cpu: "250m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 20
            periodSeconds: 20
