kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: cloudcart-service
  namespace: cloudcart

spec:
  selector:
    app: cloudcart-api

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: ClusterIP
