kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudcart-ingress
  namespace: cloudcart

spec:
  rules:
    - host: cloudcart.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudcart-service
                port:
                  number: 80
